tests/Errors/Generic/CodeAnalysis/EmptyStatement/DetectedTry.php
<?php

declare(strict_types=1);

try {
} catch (Throwable) {
    // Empty catch is allowed.
}
